image cropper-big height bug fixed

--- a/src/app/components/edit-photo-dialog/edit-photo-dialog.component.scss
+++ b/src/app/components/edit-photo-dialog/edit-photo-dialog.component.scss
@@ -373,17 +373,16 @@ $content-selector: "~ .content > section";
         }
 
         .image-cropper-container {
-          width: 100%;
           height: 100%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          background: #585858;
+          border-radius: 20px;
           image-cropper {
             border-radius: 20px;
-            width: 100%;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            --cropper-overlay-color: #b2b2b254;
-            --cropper-outline-color: rgba(0, 0, 0, 0.59);
+            --cropper-overlay-color: #b2b2b200;
+            --cropper-outline-color: rgba(0, 0, 0, 0.816);
           }
         }
       }
